# stourney_platform

./: Dockerfile  LICENSE  README.md
documentation/: .gitignore  README.md  package-lock.json
documentation/_data/: metadata.json
documentation/_includes/: header.njk  quick_links.njk  video_tour.njk
documentation/docs/: authentication.md  game-clock.md  logging.md  online.md  quick-start-guide.md  ranking.md  uploading.md
scripts/: rebuild.sh  restart.sh
server/: .gitignore  Cargo.toml  README.md  example.db
server/src/: api.rs  constants.rs  database.rs  main.rs  queue.rs  schema.sql  slug_list.rs  websocket.rs
server/src/websocket/: mod.rs  tests.rs
web/: .gitignore  eslint.config.js  package-lock.json  package.json  vite.config.ts
web/src/: app.css
web/src/lib/components/: Accept.svelte  Avatar.svelte  Bank.svelte  Cancel.svelte  Card.svelte  CardDetailGem.svelte  CardDisplay.svelte  CardRow.svelte  CardStack.svelte  ConfirmDialog.svelte  ConfirmDialogAccept.svelte  ConfirmDialogPay.svelte  GameLobby.svelte  Gem.svelte  GemToken.svelte  GemTokenSmall.svelte  HorizontalDivider.svelte  Noble.svelte  NobleDetails.svelte  Pay.svelte  Player.svelte  VerticalDivider.svelte
web/src/lib/stores/: replayStore.ts
web/src/routes/: +layout.svelte  +page.svelte  Header.svelte
web/src/routes/about/: +page.svelte
web/src/routes/demo/: +page.server.ts  +page.svelte
web/src/routes/demo/[slug]/: +page.server.ts  +page.svelte
