[package]
name = "stourney_server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
futures = "0.3.30"
futures-util = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
splendor_arena = { path = "../../arena/" }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
tokio = "1.40.0"
uuid = { version = "1.10.0", features = ["v4"] }
warp = "0.3.7"
